<resources>
    <string name="app_name">Lesson03</string>
    <string name="butDetails">Детали</string>
    <string name="butShare">Пригласить друга</string>
    <string name="title" translatable="false">Фильмы</string>
    <string name="title_favorite" translatable="false">Фавориты</string>
    <string name="butAdd" translatable="false">Добавить</string>
    <string name="butFavorites" translatable="false">Любимые</string>
    <string name="butDell" translatable="false">Удалить</string>
    <string name="title_main_activity" translatable="false">Фильмы</string>
    <string name="title_favorites_activity" translatable="false">Фавориты</string>
    <string name="menu_title_films" translatable="false">Фильмы</string>
    <string name="menu_title_favorites" translatable="false">Фавориты</string>
    <string name="menu_title_films_add" translatable="false">Добавить фильм</string>
    <string name="menu_title_films_dell" translatable="false">Удалить фильм</string>
    <string name="menu_title_invite" translatable="false">Пригласить</string>
    <string name="header_name">Просмотр фильмов</string>

</resources>